--- a/application/kouhongji/view/tixian/tixian.html
+++ b/application/kouhongji/view/tixian/tixian.html
@@ -9,6 +9,7 @@
     <meta HTTP-EQUIV="expires" CONTENT="0">
     <title>佣金提现</title>
     <script src="__STATIC__/kouhongji/base/base.js?v={:time()}"></script>
+    <script src="__STATIC__/kouhongji/base/clipboard.min.js?v={:time()}"></script>
     <link rel="stylesheet" href="__STATIC__/kouhongji/tixian/tixian.css?v={:time()}">
 </head>
 
