--- a/application/kouhongji/view/tixian/tixian.html
+++ b/application/kouhongji/view/tixian/tixian.html
@@ -36,7 +36,7 @@
                 <div class='no1'>
                     <div class='con'>{{orderNo}}</div>
                     <input type="text" v-model="orderNo" id="orderInput">
-                    <div class='fuzhi_btn' @click='fuzhi'>复制单号</div>
+                    <button class='fuzhi_btn' id="id_copy" data-clipboard-target="#orderInput" data-clipboard-action="copy">复制单号</button>
                 </div>
                 <image class='close' src='https://txcdn.ylll111.xyz/hzttk/tixian_close.png' @click='closeTk'></image>
             </div>
