--- a/application/kouhongji/view/tixian/tixian.html
+++ b/application/kouhongji/view/tixian/tixian.html
@@ -35,7 +35,7 @@
                 <div class='txt'>点击下方复制单号提现</div>
                 <div class='no1'>
                     <div class='con'>{{orderNo}}</div>
-                    <input type="text" v-model="orderNo" id="orderInput">
+                    <input type="text" v-model="orderNo2" id="orderInput">
                     <button class='fuzhi_btn' id="id_copy" data-clipboard-target="#orderInput" data-clipboard-action="copy">复制单号</button>
                 </div>
                 <image class='close' src='https://txcdn.ylll111.xyz/hzttk/tixian_close.png' @click='closeTk'></image>
