--- a/public/static/kouhongji/tixian/tixian.css
+++ b/public/static/kouhongji/tixian/tixian.css
@@ -156,6 +156,7 @@ body{
     text-align: center;
     border-radius:40px;
     box-sizing: border-box;
+    background: #fff;
   }
   .success_tk #orderInput{
     position: absolute;
