--- a/public/static/kouhongji/order/order.css
+++ b/public/static/kouhongji/order/order.css
@@ -66,3 +66,63 @@
     color: #888888;
     font-size: 0.3rem;
 }
+.userAddress{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top:0;
+    left:0;
+    background: rgba(0,0,0,0.6);
+}
+.userAddress .bg{
+    width: 6.9rem;
+    padding:0.4rem 0.44rem 0.5rem;
+    box-sizing: border-box;
+    background: #fff;
+    border-radius:10px;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
+.userAddress .title{
+    text-align: center;
+    font-size: 0.32rem;
+    color:#000;
+    margin-bottom: 0.6rem;
+}
+.userAddress .tit{
+    font-size: 0.3rem;
+    color:#999;
+    margin-bottom: 0.16rem;
+}
+.userAddress input{
+    width: 100%;
+    height: 0.88rem;
+    border-radius:5px;
+    background: #e5e5e5;
+    margin-bottom: 0.3rem;
+    padding:0 0.2rem;
+    display: block;
+    box-sizing: border-box;
+    outline: none;
+    border: 0;
+    font-size: 0.3rem;
+}
+.userAddress .submit{
+    width: 2.6rem;
+    height: 0.8rem;
+    border-radius:60px;
+    margin:0 auto;
+    text-align: center;
+    line-height: 0.8rem;
+    color:#fff;
+    font-size: 0.32rem;
+    background: #FE55A7;
+}
+.userAddress .close{
+    position: absolute;
+    top:0.3rem;
+    right:0.3rem;
+    font-size: 1rem;
+}
