--- a/application/kouhongji/view/tixian/tixian.html
+++ b/application/kouhongji/view/tixian/tixian.html
@@ -32,22 +32,21 @@
             <div class='bg'>
                 <image class='success_img' src='https://txcdn.ylll111.xyz/hzttk/icon-finish.png'></image>
                 <div class='title'>提现单号</div>
-                <div class='txt'>长按复制下方单号去提现</div>
+                <div class='txt'>复制下方单号去提现</div>
                 <div class='no1'>
-                    <div class='con'>{{orderNo}}</div>
-                    <!-- <input type="text" v-model="orderNo2" id="orderInput"> -->
-                    <div class='fuzhi_btn' @click="wxTixian">去提现</div>
+                    <input class='con' id="rnm" :value="orderNo" readonly >
+                    <div class='fuzhi_btn' @click="fuzhi">复制单号</div>
                 </div>
                 <image class='close' src='https://txcdn.ylll111.xyz/hzttk/tixian_close.png' @click='closeTk'></image>
             </div>
         </div>
-        <!-- <div class='kf_tips' v-if="kfTkShow">
+        <div class='kf_tips' v-if="kfTkShow">
             <div class='bg'>
                 <div class='tit'>单号已复制，前往提现</div>
                 <div class='kfbtn' @click="wxTixian">去提现 </div>
                 <image class='close' src='https://txcdn.ylll111.xyz/hzttk/tixian_close.png' @click='closeTk'></image>
             </div>
-        </div> -->
+        </div>
         <div class="loading" v-show="loadShow">
             <div class="bg"><img src="__STATIC__/kouhongji/image/loading.gif"></div>
         </div>
