--- a/application/kouhongji/view/user/user.html
+++ b/application/kouhongji/view/user/user.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <div></div>
-                <div class="li">
+                <div class="li" @click="goFenxiao">
                         <div>我的佣金</div>
                         <div class="item">
                             <span class="mycoin ys">{{userInfo.dis_money}}</span>
