--- a/application/khj2/view/recharge_amount/index.html
+++ b/application/khj2/view/recharge_amount/index.html
@@ -57,6 +57,7 @@
             <th class='text-left nowrap'>标题</th>
             <th class='text-left nowrap'>副标题</th>
             <th class='text-left nowrap'>金额</th>
+            <th class='text-left nowrap'>排序</th>
             <th class='text-left nowrap'>状态</th>
             
     	</tr>
@@ -96,7 +97,9 @@
             <td class='text-left nowrap'>
                 {$vo.money}
             </td>
-
+            <td class='text-left nowrap'>
+                {$vo.sort}
+            </td>
             <td class='text-left nowrap'>
                  {if condition="$vo.status == 1"}
                  <span style="color:green">启用</span>
