--- a/application/khj2/view/user_record/index.html
+++ b/application/khj2/view/user_record/index.html
@@ -24,6 +24,12 @@
             <input name="nickname" value="{$Think.get.nickname|default=''}" placeholder="请输入想要搜索的关键字" class="layui-input">
         </div>
     </div>
+    <div class="layui-form-item layui-inline">
+        <label class="layui-form-label">邀请人id</label>
+        <div class="layui-input-inline">
+            <input name="invite_id" value="{$Think.get.invite_id|default=''}" placeholder="请输入想要搜索的关键字" class="layui-input">
+        </div>
+    </div>
 
     <div class="layui-form-item layui-inline">
         <button class="layui-btn layui-btn-primary"><i class="layui-icon">&#xe615;</i> 搜 索</button>
